# smart-nav-cane

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: default.yaml
docs/: deployment.md
docs/photos/: logitechC270.jfif  raspberry.jfif
docs/presentation/: final_slides.html  final_slides.md  final_speaker_script.md  slides.html  slides.md  speaker_script.md
docs/report/: report.tex
docs/report/validation/: orb_robustness_results.json  orb_robustness_test.py
scripts/: awareness.py  demo_voice.py  navigate.py  navigate_voice.py  test_sensors.py  train.py
src/nav_assistant/: __init__.py  awareness.py
src/nav_assistant/audio/: __init__.py  guidance.py
src/nav_assistant/localization/: __init__.py  place_recognizer.py
src/nav_assistant/mapping/: __init__.py  environment.py  recorder.py  waypoint.py
src/nav_assistant/navigation/: __init__.py  guided_navigator.py  navigator.py  route_graph.py
src/nav_assistant/obstacle/: __init__.py  detector.py
src/nav_assistant/perception/: __init__.py  object_detector.py
src/nav_assistant/sensors/: __init__.py  base.py  tof.py  utils.py  webcam.py
src/nav_assistant/speech/: __init__.py  recognizer.py
tests/: test_perception.py  test_waypoints.py
